# maui-settings

./: .gitignore  CMakeLists.txt  Messages.sh  README.md  maui-settings-appimage.yml
audio/: CMakeLists.txt  MauiCoreAudioConfig.cmake.in
audio/src/: CMakeLists.txt  resources.qrc
audio/src/code/: context.cpp  context.h  device.h  pulseaudio.cpp  pulseaudio.h  pulseobject.h  server.cpp  sink.cpp  sink.h
audio/src/code/model/: sortfiltermodel.cpp  sortfiltermodel.h
audio/src/code/qml/: listitemmenu.cpp  listitemmenu.h  plugin.cpp  plugin.h
audio/src/controls/: PulseObjectFilterModel.qml
lib/: CMakeLists.txt  MauiSettingsLibConfig.cmake  MauiSettingsLibConfig.cmake.in  mauisettingslib_version.h  resources.qrc
lib/code/: abstractmodule.cpp  abstractmodule.h  settings_plugin.cpp  settings_plugin.h
lib/controls/: GraphicButton.qml  SettingsLayout.qml  SettingsPage.qml
lib/src/: CMakeLists.txt
lib/src/code/: abstractmodule.cpp  abstractmodule.h  settings_plugin.cpp  settings_plugin.h
lib/src/controls/: GraphicButton.qml  SettingsPage.qml  qmldir
manager/: CMakeLists.txt
manager/app/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
manager/app/assets/: assets.qrc
manager/app/data/: org.maui.manager.desktop  org.maui.settings.appdata.xml  org.maui.settings.desktop
manager/app/modules/: modules.qrc
manager/app/modules/about/: AboutModuleView.qml  aboutdata.cpp  aboutdata.h  aboutmodule.cpp  aboutmodule.h
manager/app/modules/audio/: audiomodule.cpp
manager/app/modules/background/: BackgroundModuleView.qml  CMakeLists.txt  background.cpp  backgroundmodule.cpp  backgroundmodule.h
manager/app/modules/background/src/: resources.qrc
manager/app/modules/background/src/code/: background.cpp  background.h  backgroundmanager.cpp  backgroundmanager.h  backgroundmodule.cpp  backgroundmodule.h  com.mauiman.Background.xml  touchegg_plugin.cpp
manager/app/modules/background/src/controls/: BackgroundModuleView.qml  (+1 more)
manager/app/modules/bluetooth/: bluetoothmodule.cpp
manager/app/modules/devices/: devicesmodule.h
manager/app/modules/formfactor/: FormFactorModuleView.qml  background.h  formfactormodule.cpp  formfactormodule.h
manager/app/modules/network/: NetworkModuleView.qml  networkmodule.cpp  networkmodule.h
manager/app/modules/screen/: ScreenModuleView.qml  screenmodule.cpp  screenmodule.h
manager/app/modules/shell/: shellmodule.cpp  shellmodule.h
manager/app/modules/theme/: ThemeModuleView.qml  resources.qrc  thememodule.cpp
manager/app/modules/theme/code/: iconsmodel.cpp  iconsmodel.h  theme.cpp  theme.h  thememodule.cpp  thememodule.h
manager/app/modules/theme/controls/: ThemeModuleView.qml  qmldir
manager/app/src/: moduleitem.cpp  moduleitem.h  modulesmanager.cpp  modulesmanager.h  modulesmodel.cpp  modulesmodel.h
manager/app/src/code/: modulesmanager.cpp  modulesmanager.h  modulesmodel.cpp  modulesmodel.h
manager/app/src/controls/: HomeView.qml
manager/app/src/modules/: modules.qrc
manager/app/src/modules/about/: AboutModuleView.qml  aboutdata.cpp  aboutdata.h  aboutmodule.cpp  aboutmodule.h
manager/app/src/modules/accessibility/: AccessibilityModuleView.qml  accessibilitymodule.cpp  accessibilitymodule.h
manager/app/src/modules/accounts/: accountsmodule.cpp  accountsmodule.h
manager/app/src/modules/audio/: AudioCard.qml  AudioModuleView.qml  audiomodule.cpp  audiomodule.h
manager/app/src/modules/background/: BackgroundModuleView.qml  WallpapersPage.qml  background.cpp  background.h  backgroundmodule.cpp  backgroundmodule.h
manager/app/src/modules/bluetooth/: bluetoothmodule.cpp  bluetoothmodule.h
manager/app/src/modules/dock/: shellmodule.cpp  shellmodule.h
manager/app/src/modules/formfactor/: FormFactorModuleView.qml  formfactormodule.cpp  formfactormodule.h
manager/app/src/modules/inputdevices/: InputDevicesModuleView.qml  inputdevicesmodule.cpp  inputdevicesmodule.h
manager/app/src/modules/launcher/: shellmodule.cpp
manager/app/src/modules/network/: NetworkModuleView.qml  networkmodule.cpp  networkmodule.h
manager/app/src/modules/screen/: ScreenModuleView.qml  screen.cpp  screen.h  screenmodule.cpp  screenmodule.h
manager/app/src/modules/screenshot/: ScreenshotModuleView.qml  screenshothandler.cpp  screenshothandler.h  screenshotmodule.cpp  screenshotmodule.h
manager/app/src/modules/shell/: shellmodule.cpp
manager/app/src/modules/theme/: ColorSchemesPage.qml  FontsPage.qml  IconsPage.qml  StyleTypeButton.qml  ThemeModuleView.qml  UnitsPage.qml  WindowControlsPage.qml  iconsmodel.cpp  iconsmodel.h  theme.cpp  theme.h  thememodule.cpp  thememodule.h
manager/app/src/server/: server.cpp  server.h
mauiman/: CMakeLists.txt
mauiman/code/: abstractmodule.h  backgroundman.cpp  backgroundman.h  dbusmodulesyncer.cpp  dbusmodulesyncer.h  mauimanutils.cpp  mauimanutils.h  settingsstore.cpp  settingsstore.h
mauiman/code/modules/: backgroundmanager.cpp  backgroundmanager.h  thememanager.cpp  thememanager.h
modules/touchegg/: CMakeLists.txt
modules/touchegg/src/code/: lists.cpp
modules/touchegg/src/controls/: Touchegg.qml
qpa_theme/: CMakeLists.txt
qpa_theme/src/: CMakeLists.txt  main.cpp  mauiplatformtheme.cpp  mauiplatformtheme.h  mauiplatformtheme.json
server/: CMakeLists.txt
server/src/: main.cpp  server.cpp  server.h
server/src/modules/: background.cpp  background.h  org.mauiman.Background.xml  org.mauiman.Theme.xml  theme.cpp  theme.h
src/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
src/data/: data.qrc  org.maui.manager.desktop
src/man/: CMakeLists.txt  MauiManConfig.cmake.in
src/man/code/: abstractmodule.h
src/modules/: CMakeLists.txt
src/modules/background/: CMakeLists.txt
src/modules/background/src/: CMakeLists.txt  resources.qrc
src/modules/background/src/code/: backgroundmodule.cpp  backgroundmodule.h
src/modules/firewall/src/code/: firewall_plugin.h
src/modules/touchegg/src/: CMakeLists.txt
src/modules/touchegg/src/controls/: Touchegg.qml
src/src/code/: modulesmanager.cpp  modulesmanager.h  modulesmodel.cpp  modulesmodel.h
src/src/controls/: HomeView.qml
(+21 files in other folders)
